--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/compiler-cli": "10.0.0",
     "@ngtools/webpack": "10.0.0",
     "@openapitools/openapi-generator-cli": "1.0.13-4.3.1",
+    "@types/babel__traverse": "^7.0.6",
     "@types/chai": "4.2.11",
     "@types/chai-string": "1.4.2",
     "@types/jest": "26.0.3",
